changed some files