@@ -22,26 +22,46 @@ targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.compilerArgs += [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
 }
 
 application {
     mainModule = 'com.project.paradoxplatformer'
     mainClass = 'com.project.paradoxplatformer.HelloApplication'
+    applicationDefaultJvmArgs = [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
 }
+
 
 javafx {
     version = '17.0.6'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 dependencies {
-
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    
+    implementation("org.apache.commons:commons-lang3:3.0")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.12.0")
+    implementation("com.fasterxml.jackson.core:jackson-core:2.12.0")
+    implementation("com.fasterxml.jackson.core:jackson-annotations:2.12.0")
 }
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(Test) {
+    jvmArgs += [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    ]
 }
 
 jlink {
@@ -55,3 +75,26 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
+
+// eclipse {
+//     classpath {
+//         containers 'org.eclipse.buildship.core.gradleclasspathcontainer'
+//         file {
+//             whenMerged {
+//                 entries.findAll { it.properties.kind.equals('lib') && !it.properties.path.contains("junit") }.each {
+//                     it.entryAttributes['module'] = 'true'
+//                 }
+//                 entries.findAll { it.properties.path.startsWith('org.eclipse.jdt.launching.JRE_CONTAINER') }.each {
+//                     it.entryAttributes['module'] = 'true'
+//                 }
+
+//             }
+//         }
+//     }
+// }
+
+
+
+
+
+
